[gd_scene load_steps=2 format=3 uid="uid://bbrvpofi15082"]

[ext_resource type="Script" path="res://Scripts/RandomItemSpawner.gd" id="1_ys5bq"]

[node name="RandomItemSpawner" type="Node2D"]
script = ExtResource("1_ys5bq")
item_limit = 1000

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Inc_Timer" type="Timer" parent="."]
autostart = true

[node name="Boost_Pickup_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Boost_Pickup_Timer" to="." method="_on_boost_pickup_timer_timeout"]
